친구 추가, 친구 요청 응답, 친구 요청 목록 조회 작업
