# src/swagger/swagger.yaml
@@ -347,6 +347,20 @@ paths:
                 prev_address_id:
                   type: int
                   example: 1
+  /user/friendHistory/{users_id}:
+    get:
+      tags:
+        - user
+      summary: 친구 요청 목록 조회
+      description: 응답하지 않은 친구 요청 목록을 조회한다.
+      parameters:
+        - name: users_id
+          in: query
+          required: true
+          schema:
+            type: int
+            example: 1
+
 #스키마 설정
 components:
   securitySchemes:
